Fix the lyrics stuck in the background issue

--- a/src/css/lyrics.css
+++ b/src/css/lyrics.css
@@ -1,10 +1,10 @@
 body {
     -webkit-app-region: drag;
     margin: 0;
-    font-family: FZHei-B01, 'Hiragino Kaku Gothic Pro', 'WenQuanYi Zen Hei', '微軟正黑體', '蘋果儷中黑', Helvetica, Arial, sans-serif;
 }
 
-body div {
+body .lyrics-line {
+    font-family: FZHei-B01, 'Hiragino Kaku Gothic Pro', 'WenQuanYi Zen Hei', '微軟正黑體', '蘋果儷中黑', Helvetica, Arial, sans-serif;
     background: rgba(0, 0, 0, 0.2);
     margin: 0;
     font-size: 36px;
@@ -14,5 +14,4 @@ body div {
     line-height: 1.5;
     color: #fff;
     text-shadow: #000 0px 0px 5px, #000 0px 0px 5px;
-    -webkit-font-smoothing: antialiased;
 }
